--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Hackathon Template</title>
+    <title>WIO Hackathon</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- meta property -->
-    <meta property="og:title" content="Smart Motor Hackathon">
+    <meta property="og:title" content="WIO Hackathon with Story ">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:url" content="">
